# tabela-fipe-brasil

./: LICENSE  pyproject.toml  readme.md
.github/workflows/: pylint.yml
fipe/app/: main.py
fipe/app/routers/: fipe.py
fipe/app/services/: client.py
fipe/application/main/: main.py
fipe/application/main/routers/: main.py
